# benchloop

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  REPO_MAP.md  docker-compose.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_add_users_table.py  0003_add_settings_tables.py  0004_add_experiments_table.py  0005_add_test_cases_table.py  0006_add_configs_table.py  0007_add_runs_table.py  0008_add_run_evaluations_table.py  0009_add_context_bundles_table.py
apps/api/src/benchloop_api/: __init__.py  app.py  config.py  errors.py  main.py
apps/api/src/benchloop_api/api/: contracts.py  router.py
apps/api/src/benchloop_api/auth/: __init__.py  dependencies.py  models.py  service.py
apps/api/src/benchloop_api/configs/: __init__.py  models.py  repository.py  service.py
apps/api/src/benchloop_api/context_bundles/: __init__.py  models.py  repository.py  service.py
apps/api/src/benchloop_api/db/: __init__.py  base.py  migrations.py  session.py
apps/api/src/benchloop_api/execution/: __init__.py  adapters.py  service.py  (+2 more)
apps/api/tests/: test_api_contracts.py  test_app.py  test_auth.py  test_config.py  test_configs_api.py  test_context_bundles_api.py  test_db.py  test_execution_adapters.py  test_execution_service.py  test_execution_snapshots.py  test_experiments_api.py  test_migrations.py  test_ownership.py  test_runs_api.py  test_settings_api.py  test_settings_encryption.py  test_settings_models.py  test_settings_validation.py  test_test_cases_api.py
(+87 files in other folders)
